MDEV-7334 valgrind warning "unitialized bytes" in 10.1. The 'srid' field's copying was missing in the copying Create_field::Create_field() constructor.